--- a/layouts/blogs/list.html
+++ b/layouts/blogs/list.html
@@ -10,7 +10,7 @@
       <div class="row d-flex">
         <div class="col-md-4 d-flex ftco-animate">
             <div class="blog-entry align-self-stretch">
-            <a href="blog-single.html" class="block-20" style="background-image: url('images/image_1.jpg');">
+            <a href="#" class="block-20" style="background-image: url('/images/image_1.jpg');">
             </a>
             <div class="text py-4 d-block">
                 <div class="meta">
@@ -25,7 +25,7 @@
         </div>
         <div class="col-md-4 d-flex ftco-animate">
             <div class="blog-entry align-self-stretch">
-            <a href="blog-single.html" class="block-20" style="background-image: url('images/image_2.jpg');">
+            <a href="#" class="block-20" style="background-image: url('/images/image_2.jpg');">
             </a>
             <div class="text py-4 d-block">
                 <div class="meta">
@@ -40,7 +40,7 @@
         </div>
         <div class="col-md-4 d-flex ftco-animate">
             <div class="blog-entry align-self-stretch">
-            <a href="blog-single.html" class="block-20" style="background-image: url('images/image_3.jpg');">
+            <a href="#" class="block-20" style="background-image: url('/images/image_3.jpg');">
             </a>
             <div class="text py-4 d-block">
                 <div class="meta">
@@ -55,7 +55,7 @@
         </div>
         <div class="col-md-4 d-flex ftco-animate">
             <div class="blog-entry align-self-stretch">
-            <a href="blog-single.html" class="block-20" style="background-image: url('images/image_4.jpg');">
+            <a href="#" class="block-20" style="background-image: url('/images/image_4.jpg');">
             </a>
             <div class="text py-4 d-block">
                 <div class="meta">
@@ -70,7 +70,7 @@
         </div>
         <div class="col-md-4 d-flex ftco-animate">
             <div class="blog-entry align-self-stretch">
-            <a href="blog-single.html" class="block-20" style="background-image: url('images/image_5.jpg');">
+            <a href="#" class="block-20" style="background-image: url('/images/image_5.jpg');">
             </a>
             <div class="text py-4 d-block">
                 <div class="meta">
@@ -85,7 +85,7 @@
         </div>
         <div class="col-md-4 d-flex ftco-animate">
             <div class="blog-entry align-self-stretch">
-            <a href="blog-single.html" class="block-20" style="background-image: url('images/image_6.jpg');">
+            <a href="#" class="block-20" style="background-image: url('/images/image_6.jpg');">
             </a>
             <div class="text py-4 d-block">
                 <div class="meta">
