--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -20,8 +20,8 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
  
   {{ "<!--Favicon-->" | safeHTML }}
-  <link rel="shortcut icon" href="{{ `images/apple-touch-icon.png` | absURL }}" type="image/x-icon">
-  <link rel="icon" href="{{ `images/apple-touch-icon.png` | absURL }}" type="image/x-icon">
+  <link rel="shortcut icon" href="{{ `images/favicon.jpg` | absURL }}" type="image/x-icon">
+  <link rel="icon" href="{{ `images/favicon.jpg` | absURL }}" type="image/x-icon">
 
   {{ template "_internal/google_analytics.html" . }}
   {{ template "_internal/opengraph.html" . }}
