--- a/layouts/_default/about.html
+++ b/layouts/_default/about.html
@@ -16,60 +16,26 @@
     <div class="container">
         <div class="row justify-content-center mb-5 pb-3">
             <div class="col-md-7 heading-section ftco-animate text-center">
-                <h2 class="mb-4">Our Chef</h2>
+                <h2 class="mb-4">{{ .Params.our_chef_title }}</h2>
                 <p class="flip"><span class="deg1"></span><span class="deg2"></span><span class="deg3"></span></p>
                 <p class="mt-5">{{ .Params.our_chef_content }}</p>
             </div>
         </div>
         <div class="row">
+            {{ range where .Site.Pages "Type" "chef" }}
             <div class="col-lg-3 d-flex mb-sm-4 ftco-animate">
                 <div class="staff">
-                    <div class="img mb-4" style="background-image: url('{{ .Params.chef1_image_url}}');"></div>
+                    <div class="img mb-4" style="background-image: url('{{ .Params.chef_image_url}}');"></div>
                     <div class="info text-center">
-                        <h3><a href="#">{{ .Params.chef1_name }}</a></h3>
-                        <span class="position">{{ .Params.chef1_profile }}</span>
+                        <h3><a href="#">{{ .Params.chef_name }}</a></h3>
+                        <span class="position">{{ .Params.chef_profile }}</span>
                         <div class="text">
-                            <p>{{ .Params.chef1_content }}</p>
+                            <p>{{ .Params.chef_content }}</p>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 d-flex mb-sm-4 ftco-animate">
-                <div class="staff">
-                    <div class="img mb-4" style="background-image: url('{{ .Params.chef2_image_url}}');"></div>
-                    <div class="info text-center">
-                        <h3><a href="#">{{ .Params.chef2_name }}</a></h3>
-                        <span class="position">{{ .Params.chef2_profile }}</span>
-                        <div class="text">
-                            <p>{{ .Params.chef2_content }}</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 d-flex mb-sm-4 ftco-animate">
-                <div class="staff">
-                    <div class="img mb-4" style="background-image: url('{{ .Params.chef3_image_url}}');"></div>
-                    <div class="info text-center">
-                        <h3><a href="#">{{ .Params.chef3_name }}</a></h3>
-                        <span class="position">{{ .Params.chef3_profile }}</span>
-                        <div class="text">
-                            <p>{{ .Params.chef3_content }}</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 d-flex mb-sm-4 ftco-animate">
-                <div class="staff">
-                    <div class="img mb-4" style="background-image: url('{{ .Params.chef4_image_url}}');"></div>
-                    <div class="info text-center">
-                        <h3><a href="#">{{ .Params.chef4_name }}</a></h3>
-                        <span class="position">{{ .Params.chef4_profile }}</span>
-                        <div class="text">
-                            <p>{{ .Params.chef4_content }}</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            {{ end }}
         </div>
     </div>
 </section>
