--- a/layouts/_default/contact.html
+++ b/layouts/_default/contact.html
@@ -5,19 +5,19 @@
                   <div class="col-md-4 contact-info ftco-animate">
                       <div class="row">
                           <div class="col-md-12 mb-4">
-                <h2 class="h4">Contact Information</h2>
+                <h2 class="h4">{{ .Params.contact_title }}</h2>
               </div>
               <div class="col-md-12 mb-3">
-                <p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
+                <p><span>Address:</span> {{ .Params.address }}</p>
               </div>
               <div class="col-md-12 mb-3">
-                <p><span>Phone:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
+                <p><span>Phone:</span> <a href="tel:{{ .Params.phone }}">{{ .Params.phone }}</a></p>
               </div>
               <div class="col-md-12 mb-3">
-                <p><span>Email:</span> <a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+                <p><span>Email:</span> <a href="mailto:{{ .Params.email }}">{{ .Params.email }}</a></p>
               </div>
               <div class="col-md-12 mb-3">
-                <p><span>Website:</span> <a href="#">yoursite.com</a></p>
+                <p><span>Website:</span> <a href="#">{{ .Params.website }}</a></p>
               </div>
                       </div>
                   </div>
