--- a/layouts/_default/about.html
+++ b/layouts/_default/about.html
@@ -27,7 +27,7 @@
                 <div class="staff">
                     <div class="img mb-4" style="background-image: url('{{ .Params.chef_image_url}}');"></div>
                     <div class="info text-center">
-                        <h3><a href="#">{{ .Params.chef_name }}</a></h3>
+                        <h3><a href="#">{{ .Params.title }}</a></h3>
                         <span class="position">{{ .Params.chef_profile }}</span>
                         <div class="text">
                             <p>{{ .Params.chef_content }}</p>
