--- a/layouts/_default/menu.html
+++ b/layouts/_default/menu.html
@@ -16,7 +16,7 @@
         <div class="services-wrap d-flex">
           <a href="#" class="img order-lg-last" style="background-image: url('{{ .Params.pizza_image_url}}');"></a>
           <div class="text p-4">
-            <h3>{{ .Params.pizza_name }}</h3>
+            <h3>{{ .Params.title }}</h3>
             <p>{{ .Params.pizza_content }} </p>
             <p class="price"><span>{{ .Params.pizza_price }}</span> <a href="#"
                 class="ml-2 btn btn-white btn-outline-white">Order</a></p>
@@ -92,7 +92,7 @@
                       <a href="#" class="menu-img img mb-4"
                         style="background-image: url('{{ .Params.pizza_image}}');"></a>
                       <div class="text">
-                        <h3><a href="#">{{ .Params.pizza_name }}</a></h3>
+                        <h3><a href="#">{{ .Params.title }}</a></h3>
                         <p>{{ .Params.pizza_content }}</p>
                         <p class="price"><span>{{ .Params.pizza_price }}</span></p>
                         <p><a href="#" class="btn btn-white btn-outline-white">Add to cart</a></p>
@@ -111,7 +111,7 @@
                       <a href="#" class="menu-img img mb-4"
                         style="background-image: url('{{ .Params.drink_image}}');"></a>
                       <div class="text">
-                        <h3><a href="#">{{ .Params.drink_name }}</a></h3>
+                        <h3><a href="#">{{ .Params.title }}</a></h3>
                         <p>{{ .Params.drink_content }}</p>
                         <p class="price"><span>{{ .Params.drink_price }}</span></p>
                         <p><a href="#" class="btn btn-white btn-outline-white">Add to cart</a></p>
@@ -130,7 +130,7 @@
                       <a href="#" class="menu-img img mb-4"
                         style="background-image: url('{{ .Params.burger_image}}');"></a>
                       <div class="text">
-                        <h3><a href="#">{{ .Params.burger_name }}</a></h3>
+                        <h3><a href="#">{{ .Params.title }}</a></h3>
                         <p>{{ .Params.burger_content }}</p>
                         <p class="price"><span>{{ .Params.burger_price }}</span></p>
                         <p><a href="#" class="btn btn-white btn-outline-white">Add to cart</a></p>
@@ -149,7 +149,7 @@
                       <a href="#" class="menu-img img mb-4"
                         style="background-image: url('{{ .Params.pasta_image}}');"></a>
                       <div class="text">
-                        <h3><a href="#">{{ .Params.pasta_name }}</a></h3>
+                        <h3><a href="#">{{ .Params.title }}</a></h3>
                         <p>{{ .Params.pasta_content }}</p>
                         <p class="price"><span>{{ .Params.pasta_price }}</span></p>
                         <p><a href="#" class="btn btn-white btn-outline-white">Add to cart</a></p>
