--- a/layouts/_default/services.html
+++ b/layouts/_default/services.html
@@ -16,7 +16,7 @@
             <span class="{{.Params.icon_css_class}}"></span>
           </div>
           <div class="media-body">
-            <h3 class="heading">{{ .Params.service_heading }}</h3>
+            <h3 class="heading">{{ .Params.services_title }}</h3>
             <p>{{ .Params.service_content }}</p>
           </div>
         </div>
