--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -107,7 +107,7 @@
             <span class="{{.Params.icon_css_class}}"></span>
           </div>
           <div class="media-body">
-            <h3 class="heading">{{ .Params.service_heading }}</h3>
+            <h3 class="heading">{{ .Params.title }}</h3>
             <p>{{ .Params.service_content }}</p>
           </div>
         </div>
@@ -159,7 +159,7 @@
           <div class="img" style="background-image: url('{{ .Params.menu_item_image_url}}');"></div>
           <div class="desc pl-3">
             <div class="d-flex text align-items-center">
-              <h3><span>{{ .Params.menu_item_name }}</span></h3>
+              <h3><span>{{ .Params.title }}</span></h3>
               <span class="price">{{ .Params.menu_item_price }}</span>
             </div>
             <div class="d-block">
