--- a/layouts/_default/menu.html
+++ b/layouts/_default/menu.html
@@ -42,7 +42,7 @@
           <div class="img" style="background-image: url('{{ .Params.menu_item_image_url}}');"></div>
           <div class="desc pl-3">
             <div class="d-flex text align-items-center">
-              <h3><span>{{ .Params.menu_item_name }}</span></h3>
+              <h3><span>{{ .Params.title }}</span></h3>
               <span class="price">{{ .Params.menu_item_price }}</span>
             </div>
             <div class="d-block">
