--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -95,8 +95,8 @@
   <div class="container">
     <div class="row justify-content-center mb-5 pb-3">
       <div class="col-md-7 heading-section ftco-animate text-center">
-        <h2 class="mb-4">{{ .Params.services_title }}</h2>
-        <p>{{ .Params.services_content }}</p>
+        <h2 class="mb-4">{{ .Params.services_heading_home }}</h2>
+        <p>{{ .Params.services_content_home }}</p>
       </div>
     </div>
     <div class="row">
@@ -121,8 +121,8 @@
   <div class="container">
     <div class="row justify-content-center mb-5 pb-3">
       <div class="col-md-7 heading-section ftco-animate text-center">
-        <h2 class="mb-4">{{ .Params.title }}</h2>
-        <p>{{ .Params.menu_content }}</p>
+        <h2 class="mb-4">{{ .Params.menu_title_home }}</h2>
+        <p>{{ .Params.menu_content_home }}</p>
       </div>
     </div>
   </div>
@@ -147,9 +147,9 @@
   <div class="container">
     <div class="row justify-content-center mb-5 pb-3 mt-5 pt-5">
       <div class="col-md-7 heading-section text-center ftco-animate">
-        <h2 class="mb-4">{{ .Params.menu_pricing_title }}</h2>
+        <h2 class="mb-4">{{ .Params.menu_pricing_title_home }}</h2>
         <p class="flip"><span class="deg1"></span><span class="deg2"></span><span class="deg3"></span></p>
-        <p class="mt-5">{{ .Params.menu_pricing_content }}</p>
+        <p class="mt-5">{{ .Params.menu_pricing_content_home }}</p>
       </div>
     </div>
     <div class="row">
@@ -328,8 +328,8 @@
   <div class="container">
     <div class="row justify-content-center mb-5 pb-3">
       <div class="col-md-7 heading-section ftco-animate text-center">
-        <h2 class="mb-4">{{ .Params.main_title }}</h2>
-        <p>{{ .Params.blog_content }}</p>
+        <h2 class="mb-4">{{ .Params.blog_title_home }}</h2>
+        <p>{{ .Params.blog_content_home }}</p>
       </div>
     </div>
     <div class="row d-flex">
