--- a/layouts/_default/services.html
+++ b/layouts/_default/services.html
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="row justify-content-center mb-5 pb-3">
       <div class="col-md-7 heading-section ftco-animate text-center">
-        <h2 class="mb-4">{{ .Params.services_title }}</h2>
+        <h2 class="mb-4">{{ .Params.services_heading }}</h2>
         <p>{{ .Params.services_content }}</p>
       </div>
     </div>
