--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -9,7 +9,7 @@
 		  <li class="nav-item {{if .IsHome}}active{{ end }}"><a href="/" class="nav-link">Home</a></li>
 		  <li class='nav-item {{if eq .Params.url "menu"}}active{{ end }}'><a href="/menu" class="nav-link">Menu</a></li>
 		  <li class='nav-item {{if eq .Params.url "services"}}active{{ end }}'><a href="/services" class="nav-link">Services</a></li>
-		  <li class='nav-item {{if eq .Params.url "blogs"}}active{{ end }}'><a href="/blogs" class="nav-link">blogs</a></li>
+		  <li class='nav-item {{if eq .Params.url "blog"}}active{{ end }}'><a href="/blogs" class="nav-link">Blog</a></li>
 		  <li class='nav-item {{if eq .Params.url "about"}}active{{ end }}'><a href="/about" class="nav-link">About</a></li>
 		  <li class='nav-item {{if eq .Params.url "contact"}}active{{ end }}'><a href="/contact" class="nav-link">Contact</a></li>
 		</ul>
