--- a/layouts/_default/contact.html
+++ b/layouts/_default/contact.html
@@ -5,7 +5,7 @@
                   <div class="col-md-4 contact-info ftco-animate">
                       <div class="row">
                           <div class="col-md-12 mb-4">
-                <h2 class="h4">{{ .Params.contact_title }}</h2>
+                <h2 class="h4">{{ .Params.contact_heading }}</h2>
               </div>
               <div class="col-md-12 mb-3">
                 <p><span>Address:</span> {{ .Params.address }}</p>
