--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -104,7 +104,7 @@
       <div class="col-md-4 ftco-animate">
         <div class="media d-block text-center block-6 services">
           <div class="icon d-flex justify-content-center align-items-center mb-5">
-            <img src="{{.Params.icon_image}}">
+            <img src="{{.Params.icon_image}}"alt='image'>
           </div>
           <div class="media-body">
             <h3 class="heading">{{ .Params.title }}</h3>
